--- a/package.json
+++ b/package.json
@@ -8,15 +8,17 @@
     "start": "next start",
     "lint": "next lint",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "test": "NODE_OPTIONS=--experimental-vm-modules=false jest"
   },
   "dependencies": {
-    "@types/node": "20.6.2",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
-    "eslint": "8.49.0",
-    "eslint-config-next": "13.4.19",
-    "next": "13.4.19",
+    "@types/node": "20.8.0",
+    "@types/react": "18.2.23",
+    "@types/react-dom": "18.2.8",
+    "eslint": "8.50.0",
+    "eslint-config-next": "13.5.3",
+    "jest-watch-typeahead": "2.2.2",
+    "next": "13.5.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "^6.0.8",
@@ -31,8 +33,15 @@
     "@storybook/nextjs": "^7.4.2",
     "@storybook/react": "^7.4.2",
     "@storybook/testing-library": "^0.2.1",
+    "@testing-library/dom": "^9.3.3",
+    "@testing-library/jest-dom": "^6.1.3",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.5",
     "eslint-plugin-storybook": "^0.6.13",
     "jest": "^29.7.0",
-    "storybook": "^7.4.2"
+    "jest-environment-jsdom": "^29.7.0",
+    "storybook": "^7.4.2",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1"
   }
 }
